--- a/index.html
+++ b/index.html
@@ -11,10 +11,28 @@
 
 <!-- Add something cool inside body tag --> 
 <body>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&display=swap" rel="stylesheet">
+
     <!-- feel free to change/add tags --> 
-    <h1 style="color:pink;">Today is Friday</h1>
+    <h1 style="color:rgb(255, 0, 43);">Today is Friday</h1>
     <p>Mango is the best fruit in the world!</p>
     <img src="./img/mango.jpeg" width="400">
+
+    <form action="" method="get" class="login" style = "font-family: 'Raleway', sans-serif;">
+
+        <div class="form-example">
+          <label for="username">Enter your username: </label>
+          <input type="username" name="username" id="username" required>
+        </div>
+        <div class="form-example">
+            <label for="password">Enter your password: </label>
+            <input type="password" name="password" id="password" required>
+        </div>
+        <div class="form-example">
+          <input type="submit" value="Subscribe!" style = "font-family: 'Raleway', sans-serif;">
+        </div>
+      </form>
 </body>
 
 </html>
